--- a/projeto-travelgram/index.html
+++ b/projeto-travelgram/index.html
@@ -30,7 +30,34 @@
         </ul>
       </a>
     </nav>
+    <head>
+      <div class="conteiner">
+        <div id="profile">
+          <img src="assets/images/Profile pic.png" alt="Imagem de Isabela Torres">
+          <div>Isabela Torres</div>
+          <p>Amante de viagens, cultura e gastronomia. 🌍✈️  
+            Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸
+          </p>
+        </div>
+
+        <ul id="info">
+          <li>
+            <img src="assets/icons/MapPin.svg"
+             alt="ícone localização">
+            <span>São Paulo, Brazil</span>
+          </li>
+          <li>
+            <img src="assets/icons/AirplaneTilt.svg"
+             alt="ícone de avião">
+            <span>37 países</span>
+          </li>
+          <li>
+            <img src="assets/icons/Image.svg" alt="ícone de imagem">
+            <span>240 fotos</span>
+          </li>
+        </ul>
+      </div>
+    </head>
   </div>
-    <head></head>
 </body>
 </html>
