--- a/curso-guanabara/ex004/index.html
+++ b/curso-guanabara/ex004/index.html
@@ -3,15 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Testando Imagens</title>
+  <link rel="shortcut icon" href="Bokehlicia-Captiva-Rocket.ico" type="image/x-icon">
+  <title>Favicon</title>
 </head>
 <body>
-    <h1>Testando carga e Imagens</h1>
-    <p>Abaixo você vai ver uma imagem que estpa na mesma pasta</p>
-    <img src="assets/html200.png" alt="Logo HTML5">
-    <br>
-    <img src="assets/css200.png" alt="Logo CSS">
-    <p>Também podemos carregar imagens externas</p>
-    <img src="https://a.thumbs.redditmedia.com/zDOFJTXd6fmlD58VDGypiV94Leflz11woxmgbGY6p_4.png" alt="Logo Javacript">
+    <h1>Olha o favicon aqui em cima</h1>
 </body>
 </html>
