--- a/curso-guanabara/ex003/index.html
+++ b/curso-guanabara/ex003/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Testando carga e Imagens</h1>
     <p>Abaixo você vai ver uma imagem que estpa na mesma pasta</p>
-    <img src="assets/html200.png" alt="Logo HTML5">
+    <img src="assets/html200.png" alt="Log0 HTML5">
     <br>
     <img src="assets/css200.png" alt="Logo CSS">
     <p>Também podemos carregar imagens externas</p>
