--- a/curso-guanabara/ex008/index.html
+++ b/curso-guanabara/ex008/index.html
@@ -14,5 +14,21 @@
     <h2>Itálico / Ênfase</h2>
     <p>Nesta frase, temos um <i>termo em itálico</i> usando a tag I (não semântica).</p>
     <p>Nesta frase, temos um <em>termo em ênfase</em> usando a tag EM (semântica).</p>
-    </body>
+
+    <h2>Texto marcado</h2>
+    <p>Podemos criar também um <mark>texto marcado</mark> usando a tag MARK.</p>
+
+    <h2>Texto deletado</h2>
+    <p>Podemos marcar <del>um texto como excluído</del> para indicar que ele deve ser lido, mas não considerado.</p>
+
+    <h2>Texto inserido</h2>
+    <p>Podemos marcar <ins>um texto como inserido</ins> para dar ênfase e indicar que ele foi adicionado depois.</p>
+    <p>Existe também o <u>sublinhado</u> com a tag U (não semantica)</p>
+
+    <h2>Texto subrescrito</h2>
+    <p>Para inserir coisa do tipo x<sup>20</sup>+3</p>
+
+    <h2>Texto subscrito</h2>
+    <p>Para inserir coisas do tipo H<sub>2</sub>0</p>
+</body>
 </html>
