--- a/curso-guanabara/ex010/index.html
+++ b/curso-guanabara/ex010/index.html
@@ -12,5 +12,10 @@
     <h2>Usando links internos</h2>
     <p>Esta pe a primeira página do site. Se você quiser, pode acessar também a minha <a href="pag002.html" rel="next">Segunda página</a></p>
     <p>Você também pode acessar nossa <a href="noticias/pag003.html" target="_self" rel="next">página de notícias</a></p>
+    <h1>Links para download</h1>
+    <ul>
+      <li><a href="livro/10 - Ligações em toda parte.pdf" download="10 - Ligações em toda parte.pdf" type="application/pdf">Baixar livro em PDF</a></li>
+      <li><a href="livro/10 - Ligações em toda parte.zip" download="10 - Ligações em toda parte.zip" type="application/zip">Baixar compactado em zip</a></li>
+    </ul>
 </body>
 </html>
