--- a/curso-guanabara/ex011/index.html
+++ b/curso-guanabara/ex011/index.html
@@ -14,5 +14,15 @@
       <source media="(max-width: 1050px )" srcset="imagens/foto-m.png" type="image/png">
         <img src="imagens/foto-g.png" alt="Imagem flexível">
     </picture>
-</body>
+
+    <h1>Reproduzindo Áudio</h1>
+    <p>Vamos aprender a reproduzir áudios em HTML5.</p>
+    <audio preload="metadata" controls>
+      <source src="midia/guanacast-33.mp3" type="audio/mp3">
+      <source src="midia/guanacast-33.mpeg" type="audio/mpeg">
+      <source src="midia/guanacast-33.ogg" type="audio/ogg">
+      <source src="midia/guanacast-33.wav" type="audio/wav">
+    </audio>
+    <p>Infelizmente seu navegador não consegue reproduzir áudio. <a href="midia/guanacast-33.mp3">Clique aqui para baixar o arquivo MP3</a></p>
+  </body>
 </html>
