--- a/curso-guanabara/execicios/ex013/index.html
+++ b/curso-guanabara/execicios/ex013/index.html
@@ -11,7 +11,7 @@
     <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo iste magnam praesentium aliquam pariatur, veniam provident doloremque nemo blanditiis nihil quos itaque atque doloribus sunt a unde, temporibus fugit perspiciatis!</p>
     <h2 style="color: darkred; font-size: 1.2em;">Capítulo 1.2</h2>
     <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem officiis, voluptas sequi distinctio voluptates asperiores, dolorem maxime quisquam expedita in exercitationem consectetur reprehenderit nisi aspernatur? Eveniet exercitationem dolores cum qui?</p>
-    <h1>Capítulo 2</h1>
+    <h1 style="color: blue; background-color: dodgerblue; font-size: 1.5em;">Capítulo 2</h1>
     <h2 style="color: darkred; font-size: 1.2em;">Capítulo 2.1</h2>
     <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas saepe consequuntur nemo, ducimus aspernatur ex voluptatem tempore suscipit rerum sint aut, nobis consequatur reiciendis beatae, velit quam tenetur placeat adipisci.</p>
 </body>
