--- a/curso-guanabara/execicios/ex017/fonte01.html
+++ b/curso-guanabara/execicios/ex017/fonte01.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <title>Fontes em CSS</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+   
     body {
-      font-family: Arial, Helvetica, sans-serif;
+      font-family: "Work Sans", sans-serif;
+
+      font-size: 1em;
+    }
+
+    h1 {
+      font: italic bolder 3em "Work Sans", sans-serif;
     }
   </style>
 </head>
