--- a/curso-guanabara/execicios/ex021/caixa02.html
+++ b/curso-guanabara/execicios/ex021/caixa02.html
@@ -36,6 +36,8 @@
           background-color: lightgray;
           padding: 10px;
           margin: 10px;
+          border-radius: 10px 0px;
+          box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.334);
         }
 
         article {
