--- a/curso-guanabara/desafios/desafio010/index.html
+++ b/curso-guanabara/desafios/desafio010/index.html
@@ -3,65 +3,124 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="estilo/style.css">
   <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
   <title>Como surgiu o mascote do Android?</title>
 </head>
 <body>
     <header>
-      <h1>Curiosidades de Tecnologia</h1>
-        <p>Tudo aquilo que você sempre quis saber sobre o mundo tech, em um único lugar</p>
-        <nav>
-          <a href="#">Home</a>
-          <a href="#">Notícias</a>
-          <a href="#">Curiosidades</a>
-          <a href="#">Fale Conosco</a>
-        </nav>
-    </header>
-    <main>
-      <h2>História do Mascote do Android</h2>
-         <p>Provavelmente você sabe que o sistema operacional Android, mantido pelo Google é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
-      <h2>A primeira versão</h2>
-         <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
-         <img src="imagens/dan-droids.png" alt="Fotos de 4 robôs coloridos">
-         <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.</p>
-      <h2>Surge um novo mascote</h2>
-         <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
-         <img src="imagens/irina-blok.jpg" alt="Foto de Irina">
-         <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.</p>
-         <img src="imagens/bugdroid.png" alt="Foto do Android com um boneco">
-         <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
-         <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M?si=KvLbmN6a_lIBuV7Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-         <h3>Quer aprender mais?</h3>
-         <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
-        <ul>
-          <li>1.5 - Cupcake</li>
-          <li>1.6 - Donut</li>
-          <li>3.0 - Eclair</li>
-          <li>2.2 - Froyo</li>
-          <li>2.3 - Gingerbread</li>
-          <li>3.0 - Honeycomb</li>
-          <li>4.0 - Ice Cream Sandwich</li>
-        </ul>
-        <ul>
-          <li>4.1 - Jelly Bean</li>
-          <li>4.4 - KitKat</li>
-          <li>5.0 - Lolipop</li>
-          <li>6.0 - Marshmallow</li>
-          <li>7.0 - Nougat</li>
-          <li>8.0 - Oreo</li>
-          <li>9.0 - Pie</li>
-        </ul>
+      <h1>
+        Curiosidades de Tecnologia
+      </h1>
 
-    <!-- Falra a lista -->
+        <p>
+          Tudo aquilo que você sempre quis saber sobre o mundo tech, em um único lugar
+        </p>
+      </header>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">Notícias</a>
+        <a href="#">Curiosidades</a>
+        <a href="#">Fale Conosco</a>
+      </nav>
+      <main>
+        <article>
+          <h1>
+            História do Mascote do Android
+          </h1>
 
-          <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.
-          </p>
-          <p>Acesse aqui o site Android History para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
-          <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.
+          <p>
+            Provavelmente você sabe que o sistema operacional <strong>Android</strong>, mantido pelo <strong>Google</strong> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.
           </p>
 
-    </main>
-    <footer>Site criado por Gustavo Guanabara para o CursoemVideo.</footer>
+          <h2>
+            A primeira versão
+          </h2>
+
+          <p>
+            A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank" rel="external">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.softonic.com.br/" target="_blank" rel="external">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
+          </p>
+
+          <img src="imagens/dan-droids.png" alt="Primeiro mascote do Android">
+
+          <p>
+            Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.
+          </p>
+
+          <h2>
+            Surge um novo mascote
+          </h2>
+
+          <p>
+            A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/android" target="_blank" rel="external">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
+          </p>
+
+          <img src="imagens/irina-blok.jpg" alt="Foto de Irina criadora do mascote Android">
+
+          <p>
+            A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.
+          </p>
+
+          <img src="imagens/bugdroid.png" alt="Bugdroid">
+
+          <p>
+            A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do <strong>Google</strong> e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.
+          </p>
+
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M?si=KvLbmN6a_lIBuV7Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+          <aside>
+            <h3>
+              Quer aprender mais?
+            </h3>
+            <p>
+              Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.
+            </p>
+
+            <ul>
+              <li>1.5 - <abbr title="Bolo de copo">Cupcake</abbr></li>
+
+              <li>1.6 - <abbr title="Rosquinha">Donut</abbr></li>
+
+              <li>3.0 - <abbr title="Bomba">Eclair</abbr></li>
+
+              <li>2.2 - <abbr title="Iogurte Congelado">Froyo</abbr></li>
+
+              <li>2.3 - <abbr title="Favo de Mel">Gingerbread</abbr></li>
+
+              <li>3.0 - <abbr title="Sanduíche de Sorvete">Honeycomb</abbr></li>
+
+              <li>4.0 - <abbr title="Sanduíche de Sorvete">Ice Cream Sandwich</abbr></li> 
+
+              <li>4.1 - <abbr title="Jujuba">Jelly Bean</abbr></li>
+
+              <li>4.4 - <abbr title="KitKat">KitKat</abbr></li>
+
+              <li>5.0 - <abbr title="Pirulito">Lolipop</abbr></li>
+
+              <li>6.0 - <abbr title="Marshmallow">Marshmallow</abbr></li>
+
+              <li>7.0 - <abbr title="Torrone">Nougat</abbr></li>
+
+              <li>8.0 - <abbr title="Oreo">Oreo</abbr></li>
+
+              <li>9.0 - <abbr title="Torta">Pie</abbr></li>
+            </ul>
+            
+            <p>
+              Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.
+            </p>
+
+            <p>
+              Acesse aqui o site <a href="https://www.android.com/intl/en_uk/what-is-android/" target="_blank" rel="external">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema <strong>Android</strong>.
+            </p>
+
+            <p>
+              Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.
+            </p>
+          </aside>
+        </article>
+        </main>
+    <footer>Site criado por <a href="https://www.linkedin.com/in/renanheidinakatani/" target="_blank" rel="external">Renan Nakatani</a></footer>
 </body>
 </html>
