Atualizei exercícios capítulo 19

--- a/projetos-rocketseat/projeto-travelgram/index.html
+++ b/projetos-rocketseat/projeto-travelgram/index.html
@@ -30,7 +30,7 @@
         </ul>
       </a>
     </nav>
-    <head>
+    <header>
       <div class="conteiner">
         <div id="profile">
           <img src="assets/images/Profile pic.png" alt="Imagem de Isabela Torres">
@@ -57,7 +57,7 @@
           </li>
         </ul>
       </div>
-    </head>
+    </header>
   </div>
 </body>
 </html>
